# cohort

./: .env.example  .gitignore  Cohort-Learning-Platform-Capstone.md  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 02594c7016b7_create_assignment_table.py  573b7f0f9b13_users_and_courses_tables.py  62cb4dc60407_new_onboarding_table.py  baae42bf4b5d_create_table_notifications.py  e4dc76a07173_submission_and_score_tables.py  f94269fa06fe_add_cohorts_table_and_column_cohort_id_.py
app/assignments/: assignment_api.py  assignment_repository.py  assignment_schema.py  assignment_service.py
app/auth/: login_api.py  login_schema.py  login_service.py
app/cohort/: cohort_api.py  cohort_repository.py  cohort_schema.py  cohort_service.py
app/core/config/: config.py
app/core/database/: database.py
app/course_onboarding/: course_onboarding_api.py  course_onboarding_repository.py  course_onboarding_schema.py  course_onboarding_service.py
app/courses/: course_repository.py  course_service.py  courses_api.py  courses_schema.py
app/models/: assignment.py  cohort.py  course.py  notifications.py  onboarding.py  role.py  scores.py  submissions.py  user.py  user_role.py
app/notifications/: notification_api.py  notification_repository.py  notification_service.py
app/user_roles/: user_role_repository.py  user_role_service.py
app/users/: user_api.py  user_repository.py  user_schema.py  user_service.py
app/utils/agent/: agent_service.py
app/utils/jwt_helper/: jwt_helper.py
app/utils/passwords/: password_helper.py
app/utils/role_checker/: role_checker.py
app/utils/s3_storage_service/: s3_service.py
app/utils/ses_email_service/: email_service.py
