[project]
name = "cohort"
version = "0.1.0"
description = ""
authors = [
    {name = "Priyanshu Deshmukh",email = "priyanshu.deshmukh@coditas.com"}
]
requires-python = ">=3.13,<4.0.0"
dependencies = [
    "fastapi (>=0.138.0,<0.139.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "uvicorn (>=0.49.0,<0.50.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "sqlalchemy (>=2.0.51,<3.0.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "pydantic-settings (>=2.14.2,<3.0.0)",
    "python-multipart (>=0.0.32,<0.0.33)",
    "psycopg2 (>=2.9.12,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
